@@ -1247,7 +1247,7 @@ $_LANG['Specified name is too long (max.$0 characters)!'] = 'Wybrana nazwa jest 
 $_LANG['Specify customer contract template. It can include comma separated list of contract templates with their names. Default: contract.html.'] = 'Wybierz wzór umowy klienta. Opcja może zawierać kilka wzorów umów oddzielonych przecinkami. Domyślnie: contract.html.';
 $_LANG['Specify format of verbal amounts representation (on invoices). e.g. for value "1" verbal expand of 123,15 will be "one two thr 15/100". Default: 0.'] = 'Określ typ reprezentacji słownej liczb (na fakturach). np dla wartości "1" słowne określenie sumy 123,15 wędzie wyglądało "jed dwa trz 15/100". Domyślnie: 0.';
 $_LANG['Specify time (in seconds), after which node will be marked offline. It should match with frequency of running nodes activity script (i.e. lms-fping). Default: 600.'] = 'Określ czas (w sekundach) po jakim komputer będzie uważany za wyłączony. Powinno się to pokrywać z częstotliwością uruchamiania skryptu dokonującego sprawdzenia aktywności komputerów (np lms-fping). Domyślnie: 600.';
-$_LANG['SQL query executed while reload, if reload_type = sql. Default: empty . You can use \'%TIME%\' as replacement to current unix timestamp. WARNING! Semicolon is handled as query separator, which means that you can enter couple of SQL queries separated by semicolon sign.'] = 'Zapytanie SQL wykonywane pod czas przeładownia jeżeli reload_type = sql. Domyślnie: pusta. W zapytaniu może być użyta zmienna \'%TIME%\' jako zastępstwo właściwego czasu zapisanego w formacie UNIX_TIMESTAMP. UWAGA! Średnik jest interpretowany jako znak rozdzielający zapytania. Oznacza to, że możesz wpisać kilka zapytań SQL oddzielonych średnikami.';
+$_LANG['SQL query executed while reload, if reload_type = sql. Default: empty. You can use \'%TIME%\' as replacement to current unix timestamp. WARNING! Semicolon is handled as query separator, which means that you can enter couple of SQL queries separated by semicolon sign.'] = 'Zapytanie SQL wykonywane pod czas przeładownia jeżeli reload_type = sql. Domyślnie: pusta. W zapytaniu może być użyta zmienna \'%TIME%\' jako zastępstwo właściwego czasu zapisanego w formacie UNIX_TIMESTAMP. UWAGA! Średnik jest interpretowany jako znak rozdzielający zapytania. Oznacza to, że możesz wpisać kilka zapytań SQL oddzielonych średnikami.';
 $_LANG['SSL Enforcing. Setting this option to 1 will effect with that LMS will enforce SSL connection with redirect to \'https://\'.$_SERVER[HTTP_HOST].$_SERVER[REQUEST_URI] at every request without SSL. Default: 0 (off).'] = 'Wymuszanie SSL. Ustawienie tej opcji na 1 sprawi, że LMS wymusi przekierowanie do połączenia SSL poprzez wykonanie przekierowania do \'https://\'.$_SERVER[HTTP_HOST].$_SERVER[REQUEST_URI] Przy każdej próbie dostępu z wyjątkiem SSL. Domyślnie: 0 (off).';
 $_LANG['SSN'] = 'PESEL';
 $_LANG['SSN:'] = 'PESEL:';
@@ -1852,5 +1852,8 @@ $_LANG['Network Devices Search Results'] = 'Wyniki wyszukiwania urządzeń';
 $_LANG['No such devices matching search criteria.'] = 'Brak urządzeń spełniających kryteria wyszukiwania.';
 $_LANG['Reason:'] = 'Powód:';
 $_LANG['Enter reason (optional)'] = 'Podaj powód (opcjonalnie)';
+$_LANG['PIN code is required!'] = 'Kod PIN jest wymagany!';
+$_LANG['Registry not selected!'] = 'Nie wybrano rejestru!';
+$_LANG['You have no write rights to selected registry!'] = 'Nie posiadasz prawa zapisu w wybranym rejestrze!';
 
 ?>
