@@ -77,9 +77,8 @@ elseif(isset($_POST['customerdata']))
 		$error['email'] = trans('Incorrect email!');
 
 	if($customerdata['pin'] == '')
-		$customerdata['pin'] = 0;
-
-	if($customerdata['pin']!=0 && !eregi('^[0-9]{4,6}$',$customerdata['pin']))
+		$error['pin'] = trans('PIN code is required!');
+	elseif(!eregi('^[0-9]{4,6}$',$customerdata['pin']))
 		$error['pin'] = trans('Incorrect PIN code!');
 
 	if($customerdata['status'] == 1 && $LMS->GetCustomerNodesNo($customerdata['id'])) 
